snake_cased everything, updated module 1 to correct links. Need to update the rest, also need to write stuff about implicit/explicit types.

--- a/1_python_basics/1.2_types.md
+++ b/1_python_basics/1.2_types.md
@@ -9,13 +9,13 @@ ___
 
 ___
 ## Types
+Variables in Python have different types, the 4 most common non-collection (not [lists/tuples](/2_python_data_structures/2.1_lists_and_tuples.md), [sets](/2_python_data_structures/2.2_sets.md) or [dictionaries](/2_python_data_structures/2.3_dictionaries.md)) are:  
+* integers (`int`)
+* strings (`str`)
+* floats (`float`)
+* boolean (`bool`)
 
-*A type is how Python represents different types of data.*
-
-Python is an object-oriented language. There are many different types of objects in Python, some of the most common objects are integers (`int`), strings (`str`) floats (`float`) and boolean (`bool`). The data type in Python can be determined using the type command.
-
-<details><summary>Variable Types</summary>
-
+The data type in Python can be determined using the `type()` statement.
 ```py
 ## Declare Variables of different types 
 age = 38
@@ -28,7 +28,6 @@ print ("Height: ", height, type(height))
 print ("Age: ", age, type(age))
 print ("Check: ", check, type(check))
 ```
-</details>
 
 Will output:
 ```
@@ -37,6 +36,7 @@ Height:  1.6 <class 'float'>
 Age:  38 <class 'int'>
 Check:  True <class 'bool'>
 ```
+
 *See [Expressions and Variables](1.3%20Expressions%20and%20Variables.md#variables-from-user-input) for information on variables*
 
 * **Integers:** The set of real numbers with no decimal or fraction; -1, 2, 1000 etc.
@@ -103,10 +103,7 @@ Similarly a `1`/`0` cast to boolean will result in `True`/`False` respectively.
 
 ___
 ### Advanced Type Casting
-There are more advanced ways to do type casting, for example, taking an [input](1.3%20Expressions%20and%20Variables.md#variables-from-user-input) (which is always a string), and casting it to an integer; however the required input type should be made clear to the user and [exception handling](/3%20Flow%20Control/3.5%20Exception%20Handling.md#exception-handling) is a very good idea.  
-<details><summary>Cast User Input to Integer</summary>
-
+There are more advanced ways to do type casting, for example, taking an [input](/1_python_basics/1.3_expressions_and_variables.md#variables-from-user-input) (which is always a string), and casting it to an integer; however the required input type should be made clear to the user and [exception handling](/3_flow_control/3.5_exception_handling.md#exception-handling) is a very good idea.  
 ```py
 age = int(input("Enter your age: "))
 ```
-</details>
