--- a/1_python_basics/1.4_string_operations.md
+++ b/1_python_basics/1.4_string_operations.md
@@ -18,7 +18,6 @@ ___
     - [Sub](#sub)
 - [String Exercises](#string-exercises)
 
-___
 ## Strings
 *Strings are sequences of characters contained within two quotes (either double or single - just be consistent!)*  
 
@@ -32,7 +31,6 @@ Strings can be bound to variables
 string = "String with a 3 in it!"
 ```
 
-___
 ### Indexing
 Strings are best thought of as an ordered sequence. Each element in the sequence can be accessed using an index represented by the array of numbers. 
 
@@ -43,68 +41,40 @@ Strings are best thought of as an ordered sequence. Each element in the sequence
 It is helpful to think of a string as an ordered sequence. Each element in the sequence can be accessed using an index represented by the array of numbers:
 
 Items in the string can be accessed by referencing their index; indexing starts at 0.
-<details><summary>Print the first element in the string</summary>
 
+Print the first element in the string and the 5th element in the string:  
 ```py
 print(string[0])
-```
-
-Will output:  
-```
-S
-```
-</details><p></p>
-
-<details><summary>Print the fifth element in the string</summary>
-
-```py
 print(string[5])
 ```
 
 Will output:  
 ```
+S
 g
 ```
-</details><p></p>
-
 **Negative Indexing**  
-Negative indexing can be used with strings, negative index can help to count the element from the end of the string.
+Negative indexing can be used with strings, negative index can count the element from the end of the string.
 
-|S |t |r |i |n |g |  |w |i |t |h |  |a |  |3 |  |i |n |  |i |t |! |  
-|- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |  
-|0 |1 |2 |3 |4 |5 |6 |7 |8 |9 |10|11|12|13|14|15|16|17|18|19|20|21|  
+| S | t | r | i | n | g |   | w | i | t | h |   | a |   | 3 |   | i | n |   | i | t | ! |  
+| - | - | - | - | - | - | - | - | - | - | - | - | - | - | - | - | - | - | - | - | - | - |  
+|-22|-21|-20|-19|-18|-17|-16|-15|-14|-13|-12|-11|-10|-9 |-8 |-7 |-6 |-5 |-4 |-3 |-2 |-1 |  
 
-
-
-The last element is given by the index -1:  
-<details><summary>Print the last element in the string</summary>
-
+The last element is given by the index -1, The first element can be obtained by  index -21.    
+Print the last element in the string and the first elemnt in the string:
 ```py
 print(string[-1])
-```
-
-Will output:  
-```
-!
-```
-</details><p></p>
-
-The first element can be obtained by  index -21:
-<details><summary>Print the first element in the string</summary>
-
-```py
 print(string[-21])
 ```
 
 Will output:  
 ```
+!
 S
 ```
-</details><p></p>
 
-We can find the number of characters in a string by using `len()`, short for length:  
-<details><summary>Find the length of string</summary>
-
+The number of characters in a string can be found using `len()`, short for length:  
+Find the length of string:
 ```py
 len(string)
 ```
@@ -113,105 +83,56 @@ Will output:
 ```
 22
 ```
-</details><p></p>
 
 ### Slicing
 Multiple characters can be obtained from a string using slicing.
 
-|S |t |r |i |n |g |  |w |i |t |h |  |a |  |3 |  |i |n |  |i |t |! |  
-|- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |  
-|0 |1 |2 |3 |4 |5 |6 |7 |8 |9 |10|11|12|13|14|15|16|17|18|19|20|21|  
-
 When taking a slice, the first number indicates the starting index (start at 0), and the second number indicates the length of the slice (start at 1).  
-<details><summary>Take the first 4 characters of the variable</summary>
-
+Take the first 4 characters of the variable and slice from index 8-11:  
 ```py
 string[0:4]
-```
-
-Will output:  
-```
-'Stri'
-```
-</details><p></p>
-
-<details><summary>Slice the variable string with only index 8 to index 11</summary>
-
-```py
 string[8:12]
 ```
 
 Will output:  
 ```
+'Stri'
 'ith '
 ```
-</details><p></p>
 
 ### Stride
 Stride values can be found using by indicating a step after the slice (with or without selecting the starting index and length)
 
-
-|S |t |r |i |n |g |  |w |i |t |h |  |a |  |3 |  |i |n |  |i |t |! |  
-|- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |  
-|0 |1 |2 |3 |4 |5 |6 |7 |8 |9 |10|11|12|13|14|15|16|17|18|19|20|21|  
-
-<details><summary>Select every second element</summary>
-
+Select every second element, and select every second element in the range from index 0 to index 4:
 ```py
 string[::2]
-```
-
-Will output:  
-```
-'Srn iha3i t'
-```
-</details><p></p>
-
-Slicing can also be incorporated with stride for example, select the first five elements and then use the stride:
-<details><summary>Select every second element in the range from index 0 to index 4</summary>
-
-```py
 string[0:5:2]
 ```
 
 Will output:  
 ```
+'Srn iha3i t'
 'Srn'
 ```
-</details><p></p>
 
 ### Concatenation  
-
-Two or more strings can be concatenated by using the addition symbol, the result is a new string that is a combination of strings.
-<details><summary>Concatenate two strings</summary>
-
+Two or more strings can be concatenated by using the `+` symbol. The result is a new string that is a combination of strings. String values can also be replicated by multiplying the variable or string by the number of times it should be replicated.
+Concatenate two strings, and print the string 3 times:  
 ```py
 string = "String with a 3 in it!"
 new_string = string + " With this too."
+print(new_string)
+print(3 * string)
 ```
 
 Will output:  
 ```
 'String with a 3 in it! With this too.'
-```
-</details><p></p>
-
-String values can also be replicated by multiplying the variable or string by the number of times it should be replicated.
-<details><summary>Print the string for 3 times</summary>
-
-```py
-3 * string
-```
-
-Will output:  
-```
 'String with a 3 in it!String with a 3 in it!String with a 3 in it!'
 ```
-</details><p></p>
 
 A new string can be created by setting it to the original variable, concatenated  with a new string.
-<details><summary>Replace string with concatenation</summary>
-
+Replace string with concatenation
 ```py
 string = string + " With this too."
 print(string)
@@ -221,40 +142,24 @@ Will output:
 ```
 'String with a 3 in it! With this too.'
 ```
-</details><p></p>
 
-___
 ### Escape Sequences
-Back slashes represent the beginning of escape sequences. Escape sequences represent strings that may be difficult to input. For example, `\n` represents a new line. The output is given by a new line after the `\n` is encountered.
-<details><summary>New line escape sequence</summary>
-
+Back slashes represent the beginning of escape sequences. Escape sequences represent strings that may be difficult to input. For example, `\n` represents a new line. The output is given by a new line after the `\n` is encountered. Similarly, `\t` represents a tab:
+New line escape sequence and tab escape sequence:
 ```py
 print("String\nwith a 3 in it!")
+print("String\twith a 3 in it!")
 ```
 
 Will output:  
 ```
 String
 with a 3 in it!
-```
-</details><p></p>
-
-Similarly, back slash "t" represents a tab:
-<details><summary>Tab escape sequence</summary>
-
-```py
-print("String\twith a 3 in it!")
-```
-
-Will output:  
-```
 String  with a 3 in it!
 ```
-</details><p></p>
 
 To place a back slash in a string, a double backslash is used, or an `r` can be placed before the string:  
-<details><summary>Include back slash in string</summary>
-
+Include back slash in string:
 ```py
 print("String \\ with a 3 in it!")
 # Or
@@ -265,7 +170,6 @@ Will output:
 ```
 String \ with a 3 in it!
 ```
-</details><p></p>
 
 *See also [f-strings ](/1%20Python%20Basics/1.1%20Hello%20World.md#f-strings-and-printing-variables)*
 
@@ -275,6 +179,7 @@ There are many string operation methods in Python that can be used to manipulate
 
 <details><summary>Upper()</summary>
 
+the `upper()` methods conbverts all text characters to upper case.
 ```py
 # Convert all the characters in string to upper case
 a = "String with a 3 in it!"
@@ -292,6 +197,7 @@ After upper: STRING WITH A 3 IN IT!
 
 <details><summary>Lower()</summary>
 
+the `lower()` methods conbverts all text characters to lower case.
 ```py
 # Convert all the characters in string to upper case
 a = "STRING WITH A 3 IN IT!"
@@ -310,11 +216,6 @@ After lower: string with a 3 in it!
 <details><summary>Find()</summary>
 
 The method `find()` finds a sub-string. The argument is the substring you would like to find, and the output is the first index of the sequence. We can find the sub-string `with` or `i`.
-
-|S |t |r |i |n |g |  |w |i |t |h |  |a |  |3 |  |i |n |  |i |t |! |  
-|- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |- |  
-|0 |1 |2 |3 |4 |5 |6 |7 |8 |9 |10|11|12|13|14|15|16|17|18|19|20|21|  
-
 ```py
 # Find the substring in the string. Only the index of the first elment of substring in string will be the output
 string = "String with a 3 in it!"
@@ -344,8 +245,7 @@ Will output:
 
 <details><summary>Replace()</summary>
 
-The method `replace` replaces a segment of a string; i.e. a substring  with a new string. The first argument represents the substring to be replaced, the second argument is the substring it is to be replaced with. The result is a new string with the segment changed.
-
+The method `replace` replaces a segment of a string; i.e. a substring, with a new string. The first argument represents the substring to be replaced, the second argument is the substring it is to be replaced with. The result is a new string with the segment changed.
 ```py
 # Replace the word 'string' with 'biskit'
 a = "String with a 3 in it!"
@@ -374,7 +274,6 @@ String with a 3 in it
 ```
 </details><p></p>
 
-___
 ## RegEx
 In Python, RegEx (Regular Expression) is a tool for matching and manipulating strings. Python provides a built-in module called `re`, which allows working with regular expressions. 
 
@@ -395,7 +294,6 @@ There are several special sequences in RegEx that can be used to match specific 
 
 
 ### Special Sequences
-
 A simple example of using the `\d` special sequence in a regular expression pattern with Python code.  
 The regular expression pattern is defined as r"\d\d\d\d\d\d\d\d\d\d", which uses the \d special sequence to match any digit character (0-9), and the \d sequence is repeated ten times to match ten consecutive digits:
 
@@ -432,7 +330,6 @@ Matches: [',', ' ', '!']
 ### RegEx Functions
 
 #### Search
-
 The `search()` function searches for specified patterns within a string. Here is an example that explains how to use the `search()` function to search for the word `"with"` in the string `"String with a 3 in it!"`.
 ```py
 string = "String with a 3 in it!"
@@ -456,7 +353,6 @@ Match found!
 ```
 
 #### Findall
-
 The `findall()` function finds all occurrences of a specified pattern within a string.
 ```py
 string = "String with some threes and also a biskit in it!"
@@ -474,7 +370,6 @@ Will output:
 ```
 
 #### Split
-
 The method `split()` splits the string at the specified separator, and returns a [list](/2%20Python%20Data%20Structures/2.1%20Lists%20and%20Tuples.md#lists)
 ```py
 #Split the substring into list
@@ -503,7 +398,6 @@ Will output:
 ```
 
 #### Sub
-
 The `sub()` function of a regular expression in Python is used to replace all occurrences of a pattern in a string with a specified replacement.
 ```py
 string = "String with a 3 in it!"
