fix minor typos and phrasing

--- a/Python/3_flow_control/3.2_loops.md
+++ b/Python/3_flow_control/3.2_loops.md
@@ -21,15 +21,15 @@ ___
 
 ## Range  
 
-The `range()` function is particlarly useful for loops as it generates a sequence of numbers. These can be defined by `range(<start*>, <stop +1>,<step*>)`  
+The `range()` function is particularly useful for loops as it generates a sequence of numbers. These can be defined by `range(<start*>, <stop +1>,<step*>)`  
 **Note:** start and step parameters are optional.
-```py
+```python
 range(5)
 range(2, 7)
 range(1, 10, 2)
 ```
 
-Will Output:
+This Will Output:
 ```
 [0, 1, 2, 3, 4]
 [2, 3, 4, 5, 6]
