--- a/Python/3_flow_control/3.2_loops.md
+++ b/Python/3_flow_control/3.2_loops.md
@@ -39,7 +39,7 @@ This Will Output:
 ___
 ## Loops in Python
 
-Loops are used to perform repeated operations. Python provides two main types of loops:
+Loops perform repeated operations. Python provides two main types of loops:
 * **For loops:** Used for a predetermined number of iterations, iterating over sequences like lists or ranges.
 * **While loops:** Used for repeated execution based on a condition.
 
