--- a/Python/2_python_data_structures/2.1_lists_and_tuples.md
+++ b/Python/2_python_data_structures/2.1_lists_and_tuples.md
@@ -37,7 +37,7 @@ ___
 
 Both lists and tuples are ordered data types (can be iterated over), are sequential, can contain multiple *types* and can be accessed via an index reference. Both are compound data types - data made up of multiple values or data types.  
 
-The main difference between the two is that lists can be modified, whereas tuples cannot. This makes lists more flexible, however tuples are more memory efficient, making them the better option where the data will not need to change.
+The main difference between the two is that lists can be modified, whereas tuples cannot. This makes lists more flexible, however ~~tuples are more memory efficient~~, making them the better option where the data will not need to change.
 
 ___
 ## Tuples
